feat: rename project to Maltex, upgrade to v0.8.3, and complete localization

--- a/Maltex/InfoPlist.xcstrings
+++ b/Maltex/InfoPlist.xcstrings
@@ -7,13 +7,13 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "AppleSword"
+            "value" : "Maltex"
           }
         },
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "AppleSword"
+            "value" : "Maltex"
           }
         }
       }
@@ -24,13 +24,13 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "AppleSword"
+            "value" : "Maltex"
           }
         },
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "AppleSword"
+            "value" : "Maltex"
           }
         }
       }
